# tsplib-rs

./: Cargo.toml  README.md
examples/alltsp/problems/: si1032.tsp  si175.tsp
src/: build_matrix.rs  enums.rs  lib.rs  main.rs  post.md
tests/: tsp.rs
tests/testdata/: gr17.tsp
