[package]
name = "tsplib"
version = "0.3.0"
authors = ["Amédée d'Aboville <amedee.daboville@gmail.com>"]
edition = "2018"
description = "A library for parsing TSPLIB files."

[dependencies]
noisy_float = "0.1.10"
nom = "5.0.1"
strum = "0.15.0"
strum_macros = "0.15.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
